--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -301,7 +301,7 @@
                                 <div class="col-sm-3 col-md-3 col-lg-2"></div>
                                 <div class="col-sm-3 col-md-3 col-lg-4">
                                     <img class="profilepicture" style="border-radius: 10em;"
-                                        [src]="mage_path + userInfo.profile_image">
+                                        [src]="image_path + userInfo.profile_image">
                                 </div>
                                 <div class="col-sm-6 col-md-6 col-lg-6 ">
                                     <br />
@@ -434,6 +434,7 @@
             <div class="col-sm-12" style="padding-left: 0;padding-right: 0; ">
                 <section class="progress" style="background-color: none !important; margin-bottom: 0; margin-top:2em; ">
                     <div class="row" style="width:100%;">
+                        <div class="col-sm-2"></div>
                         <div class="col-sm-4">
                             <div class="round progress-radial progress-45 setsize2"
                                 style="color : black !important;  height: 150px; width: 150px; box-shadow: 1px 5px 21px #33099e;">
@@ -460,18 +461,8 @@
                             <p class="student whiteBoldText lineHeightAdjustor" style="color : black !important;">
                                 TechTalk</p>
                         </div>
-                        <div class="col-sm-4">
-                            <div class="round progress-radial progress-65 setsize2 "
-                                style="color : black !important; height: 150px; width: 150px;box-shadow: 1px 5px 21px #33099e;">
-                                <div class="overlay setsize2 " style="height: 120px;">
-                                    <p class="whiteBoldText counter-count" style="color : black !important;">
-                                        {{counter?.student_count}}</p>
-                                    <span class="counter-underline">&nbsp;</span>
-                                </div>
-                            </div>
-                            <p class="student whiteBoldText lineHeightAdjustor" style="color : black !important;">
-                                ProzectMe</p>
-                        </div>
+                        <div class="col-sm-2"></div>
+
                     </div>
 
 
