--- a/src/app/tech-bank/tech-bank.component.html
+++ b/src/app/tech-bank/tech-bank.component.html
@@ -78,13 +78,15 @@
               <div><b class="crd-lft">Topic</b> <span class="crd-ryt">: {{techteach.topic}}</span></div>
               <div><b class="crd-lft">Abstract</b> <span class="crd-ryt">: {{techteach.abstract}}</span></div>
               <div><b class="crd-lft">Technology</b> <span class="crd-ryt">: {{techteach.technology}}</span></div>
-              <div><b class="crd-lft">Sub Technology</b> <span class="crd-ryt">: {{techteach.sub_technology}}</span>
+              <div *ngIf="techteach.sub_technology!=null"><b class="crd-lft">Sub Technology</b> <span class="crd-ryt">:
+                  {{techteach.sub_technology}}</span>
               </div>
             </div>
 
             <div class="col-md-3">
               <span class="cardSubHeading crd-hdng">Industrial Expert</span>
-              <div><b class="crd-lft">Name</b> <span class="crd-ryt">: {{techteach.user_name}}</span></div>
+              <div><b class="crd-lft">Name</b> <a [routerLink]="['/myprofile',techteach.user_id]"
+                  style="color: black"><span class="crd-ryt">: {{techteach.user_name}}</span></a></div>
               <div><b class="crd-lft">Company</b> <span class="crd-ryt">:
                   {{techteach.company}}</span></div>
               <div><b class="crd-lft">Positionl</b> <span class="crd-ryt" style="font-size: 14px;">:
@@ -143,7 +145,9 @@
               <div><b class="crd-lft">Topic</b> <span class="crd-ryt">: {{techtalkdata.topic}}</span></div>
               <div><b class="crd-lft">Abstract</b> <span class="crd-ryt">: {{techtalkdata.abstract}}</span></div>
               <div><b class="crd-lft">Technology</b> <span class="crd-ryt">: {{techtalkdata.technology}}</span></div>
-              <div><b class="crd-lft">Sub Technology</b> <span class="crd-ryt">: {{techtalkdata.sub_technology}}</span>
+              <div *ngIf="techtalkdata.sub_technology!=null"><b class="crd-lft">Sub Technology</b> <span
+                  class="crd-ryt">:
+                  {{techtalkdata.sub_technology}}</span>
               </div>
             </div>
 
@@ -200,176 +204,6 @@
 
 
 
-
-
-  <div class="container-fluid" style="padding: 2px;">
-    <div class="row">
-      <div class="col-12">
-        <div class="accordion" id="accordionExample" style="margin: 0em; ">
-          <!-- <div class="card" *ngFor="let techteach of ResponseData | filterBy:techEventFilter ; let i = index; ">
-          <div class="card-header" id="teachheading{{1}}" data-toggle="" attr.data-target="#teachcollapse{{i}}"
-            aria-expanded="" attr.aria-controls="teachcollapse{{i}}">
-            <h5 class="mb-0">
-              <button *ngIf="i!=0" class="btn btn-link collapsed" type="button">
-                Tech Teach
-              </button>
-              <button *ngIf="i==0" class="btn btn-link" type="button">
-                Tech Teach
-              </button>
-            </h5>
-          </div>
-
-          <div id="teachcollapse{{i}}" [ngClass]="{'show' : i==0}" class="" attr.aria-labelledby="teachheading{{i}}"
-            data-parent="#accordionExample">
-            <div class="card-body teach-bdy">
-              <div class="col-12">
-
-                <span class="cardSubHeading crd-hdng">Tech Connect Details</span>
-                <div><b class="crd-lft">Type</b> <span class="crd-ryt">: {{techteach.tech_teach_type}}</span></div>
-                <div><b class="crd-lft">Topic</b> <span class="crd-ryt">: {{techteach.topic}}</span></div>
-                <div><b class="crd-lft">Abstract</b> <span class="crd-ryt">: {{techteach.abstract}}</span></div>
-                <div><b class="crd-lft">Technology</b> <span class="crd-ryt">: {{techteach.technology}}</span></div>
-                <div><b class="crd-lft">Sub Technology</b> <span class="crd-ryt">: {{techteach.sub_technology}}</span>
-                </div>
-                
-                <br />
-
-                <span class="cardSubHeading crd-hdng">Industrial Expert</span>
-                <div><b class="crd-lft">Name</b> <span class="crd-ryt">: {{techteach.user_name}}</span></div>
-                <div><b class="crd-lft">Company</b> <span class="crd-ryt">:
-                    {{techteach.company}}</span></div>
-                <div><b class="crd-lft">Positionl</b> <span class="crd-ryt" style="font-size: 14px;">:
-                    {{techteach.position}}</span></div>
-                <br />
-
-                <span class="cardSubHeading crd-hdng">Venue Details</span>
-                <div><b class="crd-lft">Place</b> <span class="crd-ryt">: {{techteach.place}}</span></div>
-                <div><b class="crd-lft">Address</b> <span class="crd-ryt">: {{techteach.address}}</span>
-                </div>
-                <div><b class="crd-lft" style="font-size: 13px;">City</b> <span class="crd-ryt">:
-                    {{techteach.city}}</span></div>
-                <div><b class="crd-lft">Date</b> <span class="crd-ryt">: {{techteach.event_date}}</span></div>
-
-                <br />
-
-                <span class="cardSubHeading crd-hdng">Registration Details</span>
-
-                <div><b class="crd-lft">No. of Registration</b> <span class="crd-ryt">:
-                    {{techteach.seat_capacity}}</span>
-                </div>
-
-
-              </div>
-            </div>
-
-            <div class="crd-footr">
-              <ul class="nav nav-pills crd-btn-dv">
-                <li class="nav-item">
-                  <button class="nav-link btn btn-light  buttonarticle" (click)="viewTechTeachDetails(techteach)"
-                    data-toggle="modal" data-target="#detailsModal">View
-                    Detail's</button>
-                </li>
-                <li class="nav-item" *ngIf="!checkLoginStatus()">
-                  <button class="nav-link btn btn-light buttonarticle" style=""
-                    (click)="applyForEventTechTalk(techteach)">Apply for this event</button>
-                </li>
-              </ul>
-            </div>
-
-          </div>
-        </div> -->
-
-          <!-- <div class="tech-tlk-contnr">
-          <div class="card" *ngFor="let techtalkdata of techtalkdetails | filter:techEventFilter; let i = index; ">
-            <div class="card-header" id="talkheading{{1}}" data-toggle="" attr.data-target="#talkcollapse{{i}}"
-              aria-expanded="false" attr.aria-controls="talkcollapse{{i}}">
-              <h5 class="mb-0">
-                <button *ngIf="i!=0 || (i==0 && techteachdetails?.length!=0)" class="btn btn-link collapsed"
-                  type="button">
-                  Tech Talk
-                </button>
-                <button *ngIf="i==0 && techteachdetails?.length==0" class="btn btn-link" type="button">
-                  Tech Talk
-                </button>
-              </h5>
-            </div>
-
-            <div id="talkcollapse{{i}}" [ngClass]="{'show' : i==0 && techteachdetails?.length==0}" class=""
-              attr.aria-labelledby="talkheading{{i}}" data-parent="#accordionExample">
-              <div class="card-body talk-bdy">
-                <div class="col-12">
-                  <span class="cardSubHeading crd-hdng">Tech Connect Details</span>
-                  <div><b class="crd-lft">Type</b> <span class="crd-ryt">: {{techtalkdata.tech_talk_type}}</span></div>
-                  <div><b class="crd-lft">Topic</b> <span class="crd-ryt">: {{techtalkdata.topic}}</span></div>
-                  <div><b class="crd-lft">Abstract</b> <span class="crd-ryt">: {{techtalkdata.abstract}}</span></div>
-                  <div><b class="crd-lft">Technology</b> <span class="crd-ryt">: {{techtalkdata.technology}}</span>
-                  </div>
-                  <div><b class="crd-lft">Sub Technology</b> <span class="crd-ryt">:
-                      {{techtalkdata.sub_technology}}</span>
-                  </div>
-
-                
-                  <br />
-
-                  <span class="cardSubHeading crd-hdng">Industrial Expert</span>
-
-                  <div><b class="crd-lft">Name</b> <span class="crd-ryt">: {{techtalkdata.user_name}}</span></div>
-                  <div><b class="crd-lft">Company</b> <span class="crd-ryt">:
-                      {{techtalkdata.company}}</span></div>
-                  <div><b class="crd-lft">Positionl</b> <span class="crd-ryt" style="font-size: 14px;">:
-                      {{techtalkdata.position}}</span></div>
-
-
-
-                  <div><b class="crd-lft">Name</b> <span class="crd-ryt">: {{techtalkdata.user_name}}</span></div>
-                  <div><b class="crd-lft">Contact Number</b> <span class="crd-ryt">: {{techtalkdata.contact_email}}
-                    </span></div>
-                  <div><b class="crd-lft">Email</b> <span class="crd-ryt" style="font-size: 14px;">:
-                      {{techtalkdata.contact_number}}
-                    </span></div>
-
-                  <br />
-
-                  <span class="cardSubHeading crd-hdng">Venue Details</span>
-                  <br />
-                  <div><b class="crd-lft">Place</b> <span class="crd-ryt">: {{techtalkdata.place}}</span></div>
-                  <div><b class="crd-lft">Address</b> <span class="crd-ryt">: {{techtalkdata.address}}</span></div>
-                  <div><b class="crd-lft">City</b> <span class="crd-ryt">: {{techtalkdata.city}}</span></div>
-                  <div><b class="crd-lft">Venue Date</b> <span class="crd-ryt">: {{techtalkdata.event_date}}</span>
-                  </div>
-
-
-
-                  <span class="cardSubHeading crd-hdng">Registration Details</span>
-
-                  <div><b class="crd-lft">No. of Registration</b> <span class="crd-ryt">:
-                      {{techtalkdata.seat_capacity}}</span>
-                  </div>
-
-
-                </div>
-              </div>
-
-              <div class="crd-footr">
-                <ul class="nav nav-pills crd-btn-dv">
-                  <li class="nav-item">
-                    <button class="nav-link btn btn-light  buttonarticle" (click)="viewTechTalkDetails(techtalkdata)"
-                      data-toggle="modal" data-target="#detailsModal">More Detail's</button>
-                  </li>
-                  <li class="nav-item" *ngIf="!checkLoginStatus()">
-                    <button class="nav-link btn btn-light buttonarticle"
-                      (click)="applyForEventTechTalk(techtalkdata)">Apply for the event</button>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
-        </div>
-      </div>
-    </div>
-  </div>
 
   <!-- Modal -->
   <div id="detailsModal" class="modal fade" role="dialog">
