--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         <div class="col-sm-2 col-lg-2">
             <img class="d-block companyLogo companyLogo1" src="../assets/images/logo.png" alt="First slide">
         </div>
-        <div class="align-self-center nav1 col-sm-8 col-lg-8">
+        <div class="align-self-center nav1 col-sm-6 col-lg-6">
 
 
             <!-- .navbar -->
@@ -12,14 +12,7 @@
             <input type="checkbox" class="nav-in" id="show-menu" role="button"> -->
             <ul id="menu" class="main-menu">
                 <li><a routerLink="/home" class="main-header">HOME</a></li>
-                <!-- <li>
-                    <a href="#" class="main-header">TECH WORLD <i class="fa fa-caret-down"
-                            style="display: inline;"></i></a>
-                    <ul class="hidden sub-drop">
-                        <li class="sub-menu-header"><a routerLink="/techbank">TECH BANK</a></li>
-                        <li class="sub-menu-header"><a routerLink="/techevent">TECH CONNECT</a></li>
-                    </ul>
-                </li> -->
+
                 <li>
                     <a routerLink="/stuvation" class="main-header">STUVATION</a>
 
@@ -32,9 +25,6 @@
                     <a routerLink="/techevent" class="main-header">TECH CONNECT</a>
 
                 </li>
-                <!-- <li><a routerLink="/prozectme" class="main-header">PROZECT ME</a></li>
-                <li><a href="#" class="main-header">BUSINESS</a></li> -->
-
 
                 <li *ngIf="!checkLoginStatus()">
                     <a href="#" class="main-header">PROFILE <i class="fa fa-caret-right"
@@ -67,28 +57,6 @@
                     </ul>
 
                 </li>
-
-                <!-- <li *ngIf="checkLoginStatus()">
-                    <a href="#" class="main-header">GET STARTED ￬</a>
-                    <ul class="hidden get-strt-sub">
-                        <li><a class="main-header" style="font-size:13px;text-align: start;" data-toggle="modal" href="#"
-                                data-target="#loginModal">LOGIN</a></li>
-                        <li> <a class="main-header" style="font-size:13px;text-align: start;" data-toggle="dropdown"
-                                href="#" role="button">SIGN UP</a>
-
-                            <ul class="hidden sign-up-sub">
-                                <li><a class="main-header" style="font-size:13px;text-align: start;" data-toggle="modal"
-                                        data-target="#studentRegistrationModal" href="#">STUDENT</a></li>
-                                <li> <a class="main-header" style="font-size:13px;text-align: start;" data-toggle="modal"
-                                        data-target="#engineerRegistrationModal" href="#">ENGINEER</a></li>
-                            </ul>
-
-                        </li>
-                    </ul>
-                </li> -->
-
-
-
             </ul>
             <!-- /.navbar -->
 
@@ -121,9 +89,6 @@
                                 </ul>
                             </li>
                             <li><a (click)="goStuation()">Stuvation</a></li>
-                            <!-- <li><a (click)="goEngShip()">ENG SHIP</a></li> -->
-                            <!-- <li><a (click)="goProzeMe()">PROZECT ME</a></li>
-                            <li><a href="#">BUSINESS</a></li> -->
                             <li class="showInMobile" *ngIf="checkLoginStatus()"><a class="main-header"
                                     style="font-size:13px;" data-toggle="modal" href="#"
                                     data-target="#loginModal">LOGIN</a></li>
@@ -158,7 +123,7 @@
 
         </div>
 
-        <div class="col-sm-2" style="margin-top: 3%; margin-bottom: 1%;">
+        <div class="col-sm-4" style="margin-top: 3%; margin-bottom: 1%;">
             <div class="row">
                 <!-- <ul *ngIf="checkLoginStatus()" class="nav nav-pills" style="float: right;margin-top: 16px;">
 
@@ -195,34 +160,28 @@
 
                     </li>
                 </ul>
-                <ul *ngIf="!checkLoginStatus()" class="nav nav-pills" style="float: right; margin-left: 25%;">
 
-                    <li class="nav-item">
-                        <span *ngIf="!checkLoginStatus()" style="    color: white;
-                        font-weight: bold;
-                        text-align: center;
-                        width: 100%;
-                        top: 12px;
-                        position: absolute;
-                        left: -60px;
-                        font-size: 14px;">
-                            {{getLoggedInUserObject()['name'] | titlecase}}
-                        </span>
-                        <a role="button" aria-haspopup="true" aria-expanded="false">
+                <div class="col-sm-6 user-name-header" *ngIf="!checkLoginStatus()">
+                    <span *ngIf="!checkLoginStatus()" style="color: white;
+    font-weight: bold;
+    text-align: right;
+    width: 100%;
+    top: 20px;
+    position: absolute;
+    /* left: -60px; */
+    font-size: 14px;
+    float: left;
+">
+                        {{getLoggedInUserObject()['name'] | titlecase}}
+                    </span>
+                </div>
+                <div class="col-sm-6 user-name-header" *ngIf="!checkLoginStatus()">
+                    <a role="button" aria-haspopup="true" aria-expanded="false">
 
-                            <img class="profilepicture" style="border-radius: 10em;"
-                                [src]="userImagePath + '/' + getLoggedInUserObject()['image']">
+                        <img class="profilepicture" style="border-radius: 10em;" [src]="userProfileImage">
 
-                        </a>
-                        <!-- <div ngbDropdownMenu
-                            style="transform: none !important; top:0px !important; left: 0px !important;">
-                            <a class="dropdown-item" routerLink="/myprofile">MY PROFILE</a>
-                            <a class="dropdown-item" routerLink="/engshipRequest">Engship Requests</a>
-                            <a class="dropdown-item" (click)="logout()">LOGOUT</a>
-                        </div> -->
-                    </li>
-
-                </ul>
+                    </a>
+                </div>
 
             </div>
         </div>
@@ -276,7 +235,7 @@
                     <li>FAQ's</li>
                     <li>Privacy Policy</li><br />
                     <li><button type="button" class="custom-ss-download-broucher-btn"><i class="fa fa-download"></i>
-                            &nbsp;Download Broucher</button></li>
+                            &nbsp;<a href="assets/dummy.pdf" download>Download Broucher</a></button></li>
                 </ul>
             </div>
         </div>
@@ -458,7 +417,8 @@
                     <div style="width: 100%; text-align: center; align-items: center">
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" formControlName="is_agreed"><span class="red">*</span> Agree to
+                                <input type="checkbox" formControlName="is_agreed"><span class="red">*</span> Agree
+                                to
                                 Terms and
                                 Conditions</label>
                         </div>
@@ -597,7 +557,8 @@
 
                         <div class="form-group col-6">
                             <br />
-                            <label for="lookingProfessorGuidance">Looking Guidance from academic professors :</label>
+                            <label for="lookingProfessorGuidance">Looking Guidance from academic professors
+                                :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingProfessorGuidance"
                                 formControlName="lookingProfessorGuidance" selected value="Y">&nbsp;
@@ -893,7 +854,8 @@
                         <div class="row">
                             <div class="form-group col-6">
                                 <br />
-                                <label for="lookingForEFSupportFlag">Looking for Engineers Factory Support ? :</label>
+                                <label for="lookingForEFSupportFlag">Looking for Engineers Factory Support ?
+                                    :</label>
                                 &nbsp;&nbsp;
                                 <input type="radio" name="lookingForEFSupportFlag"
                                     formControlName="lookingForEFSupportFlag" selected value="Y">&nbsp;
@@ -906,7 +868,8 @@
 
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" formControlName="tncAcceptFlag"> By checking this box, I verify
+                                <input type="checkbox" formControlName="tncAcceptFlag"> By checking this box, I
+                                verify
                                 that I have read, understood, and agreed fully with the
                                 <!-- <a data-toggle="modal"
                             data-target="#EngshipModalTnCModal" style="color:blue; font-weight: bold;"> -->terms
@@ -945,7 +908,8 @@
                     id="closeEngshipModalTnCModal">&times;</button>
             </div>
             <div class="modal-body">
-                By completing this application form, I will obey the mentor code of honour and you agree to the goals
+                By completing this application form, I will obey the mentor code of honour and you agree to the
+                goals
                 and purpose of the mentoring program. V-Engineers Factory encourages an open exchange of information
                 and ideas between members participating in the program. However, V-Engineers Factory cannot and does
                 not review such communications and does not guarantee or endorse the accuracy of any information
@@ -1062,7 +1026,8 @@
 
                         <div class="form-group col-6">
                             <br />
-                            <label for="lookingProfessorGuidance">Looking Guidance from academic professors :</label>
+                            <label for="lookingProfessorGuidance">Looking Guidance from academic professors
+                                :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingProfessorGuidance"
                                 formControlName="lookingProfessorGuidance" selected value="Y">&nbsp;
@@ -1181,7 +1146,8 @@
 
                             <button (click)="openMe()" type="button" data-toggle="modal" class="buttonarticle"> Tech
                                 Teach</button>
-                            <button (click)="openMe1()" type="button" data-toggle="modal" class="buttonarticle"> Tech
+                            <button (click)="openMe1()" type="button" data-toggle="modal" class="buttonarticle">
+                                Tech
                                 Talk</button>
                         </span>
                     </div>
@@ -1233,7 +1199,8 @@
 
 
                     <span style="color: #176086; text-decoration: underline; ">
-                        <h3 style="color: #176086  !important;font-size:20px"><span class="red">*</span> Venue Details
+                        <h3 style="color: #176086  !important;font-size:20px"><span class="red">*</span> Venue
+                            Details
                         </h3>
                     </span>
                     <div formGroupName="venueDetails">
@@ -1897,7 +1864,8 @@
             <div class="modal-body" style="text-align:center; align-content: center;">
                 Student + Innovation<br />
 
-                An initiative platform to express & excute your brilliant idea with help of co-students , Academicians
+                An initiative platform to express & excute your brilliant idea with help of co-students ,
+                Academicians
                 , Industrial Experts & Sponsors support<br />
 
                 register your academic project or Innovation<br />
@@ -1998,7 +1966,8 @@
             <div class="modal-body" style="text-align:center; align-content: center;">
                 * Acamedic ProZ * : <br />
                 <br />
-                An initiative platform to express & excute your brilliant idea with help of co-students , Academicians
+                An initiative platform to express & excute your brilliant idea with help of co-students ,
+                Academicians
                 , Industrial Experts & Sponsors support <br />
                 <br />
                 register your academic project or Innovation <br />
