--- a/src/app/engship/engship.component.css
+++ b/src/app/engship/engship.component.css
@@ -12,9 +12,13 @@
         }
    }
    
-   @media screen and (min-width: 360px) and (max-width: 539px) {}
+   @media screen and (min-width: 360px) and (max-width: 539px) {
+       
+   }
    
-   @media screen and (min-width: 460px) and (max-width: 767px) {}
+   @media screen and (min-width: 460px) and (max-width: 767px) {
+    
+   }
    
    @media only screen and (min-width: 540px) and (max-width: 767px) {}
    
